--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
   <script src="https://www.gstatic.com/firebasejs/5.8.1/firebase.js"></script>
   <script>
     const firebaseConfig = {
-      apiKey: "AIzaSyDhn80byD69jCo4oexdKdkCHUgGw9nO6CM",
-      authDomain: "dubai4db.firebaseapp.com",
-      databaseURL: "https://dubai4db-default-rtdb.firebaseio.com",
-      projectId: "dubai4db",
-      storageBucket: "dubai4db.appspot.com",
-      messagingSenderId: "776520121975",
-      appId: "1:776520121975:web:248815949672b2c4371072"
-    };
+  apiKey: "AIzaSyAr5JS1ZiNbr_LiX1mUgy9OBETA5M7utg0",
+  authDomain: "votefooodplate.firebaseapp.com",
+  databaseURL: "https://votefooodplate-default-rtdb.firebaseio.com",
+  projectId: "votefooodplate",
+  storageBucket: "votefooodplate.appspot.com",
+  messagingSenderId: "854657865369",
+  appId: "1:854657865369:web:8254da6d2a59137a7b8a08"
+};
     firebase.initializeApp(firebaseConfig);
     async function signInAnonymously() {
       try {
